--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sirius",
+  "name": "syrma",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -34,7 +34,10 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "react-redux": "^9.0.2"
+    "react-redux": "^9.0.2",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "expo-dev-client": "~2.4.13",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
